[package]
name = "logdriller"
version = "0.5.0"
edition = "2024"
description = "tool to visualize application log output in the terminal"
license = "MIT"
repository = "https://github.com/avl/logdiver"


[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["palette"] }
anyhow = "1.0.100"
notify = "8.2.0"
indexmap ="2.12.1"
gjson = "0.8.1"
clap = {version = "4.5.50", features = ["derive"]}
memchr = "2.7.6"
tui-textarea = "0.7.0"
savefile = "0.20.2"
byteorder = "1.5.0"
itertools = "0.14.0"
terminal-light = "1.8.0"
tui-scrollview = "0.5.3"
rayon = "1.11.0"

[dev-dependencies]
insta ="1.43.2"